--- a/About.css
+++ b/About.css
@@ -68,6 +68,10 @@
     margin-right: 236px;
   }
 
+  .u-section-1 .u-image-1 {
+    margin-top: 20px;
+  }
+
   .u-section-1 .u-text-2 {
     margin-right: 100px;
   }
@@ -89,7 +93,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 213px;
+    min-height: 1072px;
   }
 
   .u-section-1 .u-text-1 {
@@ -98,6 +102,14 @@
   }
 
   .u-section-1 .u-image-1 {
+    width: 291px;
+    height: 291px;
+    margin-top: 650px;
     margin-right: auto;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: -923px;
   }
 }
