--- a/Home.css
+++ b/Home.css
@@ -55,12 +55,12 @@
 .u-section-1 .u-image-2 {
   width: 497px;
   height: 267px;
-  margin: -1px auto 0 0;
+  margin: 0 auto 0 11px;
 }
 
 .u-section-1 .u-text-3 {
   font-size: 3rem;
-  margin: -186px auto 0 508px;
+  margin: -187px 22px 0 auto;
 }
 
 .u-section-1 .u-shape-1 {
@@ -71,7 +71,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: -358px auto 60px calc(((100% - 1140px) / 2) + 228px);
+  margin: -358px auto 318px calc(((100% - 1140px) / 2) + 228px);
 }
 
 @media (max-width: 1199px) {
@@ -152,45 +152,43 @@
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 414px;
+    min-height: 567px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 407px;
-    margin-top: 0;
+    height: 566px;
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: -309px;
-    margin-right: calc(((100% - 340px) / 2) + 30px);
-    margin-left: calc(((100% - 340px) / 2) + -30px);
+    width: 340px;
+    margin-top: -393px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-2 {
     font-size: 0.75rem;
-    width: auto;
-    margin-top: 8px;
-    margin-right: calc(((100% - 340px) / 2) + 30px);
-    margin-left: calc(((100% - 340px) / 2) + -30px);
+    width: 340px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-1 {
     font-size: 1rem;
-    margin-top: 28px;
-    margin-left: calc(((100% - 340px) / 2) + -30px);
+    margin-top: 26px;
+    margin-left: calc(((100% - 340px) / 2));
     padding: 3px 6px 4px 5px;
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: 67px;
+    margin-top: 144px;
     min-height: 86px;
   }
 
   .u-section-1 .u-image-2 {
     width: 158px;
     height: 83px;
-    margin-top: 0;
+    margin-left: 0;
   }
 
   .u-section-1 .u-text-3 {
@@ -204,9 +202,9 @@
   .u-section-1 .u-shape-1 {
     width: 22px;
     height: 32px;
-    margin-top: -185px;
-    margin-bottom: 153px;
-    margin-left: calc(((100% - 340px) / 2) + 92px);
+    margin-top: -262px;
+    margin-bottom: 60px;
+    margin-left: calc(((100% - 340px) / 2) + 122px);
   }
 } .u-section-2 {
   background-image: none;
@@ -371,6 +369,10 @@
     padding-right: 30px;
   }
 
+  .u-section-2 .u-line-1 {
+    margin-top: 20px;
+  }
+
   .u-section-2 .u-text-3 {
     margin-right: 220px;
   }
@@ -448,21 +450,21 @@
 
   .u-section-2 .u-group-1 {
     width: 340px;
-    margin-top: 532px;
+    margin-top: 609px;
     margin-right: auto;
   }
 
   .u-section-2 .u-text-3 {
     font-size: 1rem;
     width: auto;
-    margin-top: -623px;
+    margin-top: -700px;
     margin-left: 37px;
     margin-right: 37px;
   }
 
   .u-section-2 .u-group-2 {
     width: 340px;
-    margin-top: 280px;
+    margin-top: 382px;
     margin-right: auto;
   }
 
@@ -1146,12 +1148,12 @@
 
   .u-section-4 .u-image-1 {
     height: 274px;
-    margin-top: 0;
+    margin-top: 336px;
   }
 
   .u-section-4 .u-image-2 {
-    height: 258px;
-    width: 433px;
+    height: 268px;
+    width: 436px;
     margin-top: -563px;
     margin-left: auto;
     margin-right: auto;
@@ -1160,7 +1162,7 @@
   .u-section-4 .u-shape-1 {
     width: calc(((100% - 340px) / 2) + 170px);
     height: 617px;
-    margin-top: -306px;
+    margin-top: -316px;
   }
 
   .u-section-4 .u-layout-wrap-1 {
