--- a/Home.css
+++ b/Home.css
@@ -15,6 +15,9 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
+  transition-duration: 0.5s;
+  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
+  font-size: 2.25rem;
   margin: -643px calc(((100% - 1140px) / 2) + 450px) 0 calc(((100% - 1140px) / 2));
 }
 
@@ -55,12 +58,12 @@
 .u-section-1 .u-image-2 {
   width: 497px;
   height: 267px;
-  margin: 0 auto 0 11px;
+  margin: 0 auto 0 16px;
 }
 
 .u-section-1 .u-text-3 {
   font-size: 3rem;
-  margin: -187px 22px 0 auto;
+  margin: -187px auto 0 513px;
 }
 
 .u-section-1 .u-shape-1 {
@@ -152,22 +155,22 @@
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 567px;
+    min-height: 607px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 566px;
+    height: 606px;
   }
 
   .u-section-1 .u-text-1 {
-    width: 340px;
-    margin-top: -393px;
-    margin-left: auto;
-    margin-right: auto;
+    width: auto;
+    margin-top: -433px;
+    margin-right: 0;
+    margin-left: calc(((100% - 340px) / 2));
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 0.75rem;
+    font-size: 1.125rem;
     width: 340px;
     margin-left: auto;
     margin-right: auto;
@@ -175,37 +178,53 @@
 
   .u-section-1 .u-btn-1 {
     font-size: 1rem;
-    margin-top: 26px;
+    margin-top: 27px;
     margin-left: calc(((100% - 340px) / 2));
     padding: 3px 6px 4px 5px;
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: 144px;
-    min-height: 86px;
+    margin-top: 150px;
+    min-height: 119px;
   }
 
   .u-section-1 .u-image-2 {
-    width: 158px;
-    height: 83px;
-    margin-left: 0;
+    width: 226px;
+    left: -7px;
+    right: auto;
+    height: auto;
+    margin: initial;
   }
 
   .u-section-1 .u-text-3 {
     font-size: 1.125rem;
     width: auto;
-    margin-top: -61px;
+    margin-top: 16px;
     margin-right: -13px;
-    margin-left: 158px;
+    margin-left: 187px;
   }
 
   .u-section-1 .u-shape-1 {
     width: 22px;
     height: 32px;
-    margin-top: -262px;
+    margin-top: -302px;
     margin-bottom: 60px;
     margin-left: calc(((100% - 340px) / 2) + 122px);
   }
+}
+
+.u-section-1 .u-text-1,
+.u-section-1 .u-text-1:before,
+.u-section-1 .u-text-1 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
+}
+
+.u-section-1 .u-container-layout:hover .u-text-1 {
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
+}
+
+.u-container-layout.hover .u-section-1 .u-text-1 {
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
 } .u-section-2 {
   background-image: none;
   min-height: 702px;
@@ -244,7 +263,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 192px 136px 0 auto;
+  margin: 198px 136px 0 auto;
 }
 
 .u-section-2 .u-container-layout-3 {
@@ -261,7 +280,7 @@
 }
 
 .u-section-2 .u-text-2 {
-  margin: 30px auto 0;
+  margin: 33px 0 0;
 }
 
 .u-section-2 .u-text-3 {
@@ -272,7 +291,7 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  margin: -200px 589px 0 30px;
+  margin: -206px 589px 0 30px;
 }
 
 .u-section-2 .u-group-2 {
@@ -284,7 +303,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: -177px 136px 0 auto;
+  margin: -169px 136px 0 auto;
 }
 
 .u-section-2 .u-container-layout-4 {
@@ -464,7 +483,7 @@
 
   .u-section-2 .u-group-2 {
     width: 340px;
-    margin-top: 382px;
+    margin-top: 316px;
     margin-right: auto;
   }
 
@@ -1153,10 +1172,7 @@
 
   .u-section-4 .u-image-2 {
     height: 268px;
-    width: 436px;
     margin-top: -563px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .u-section-4 .u-shape-1 {
@@ -1599,6 +1615,14 @@
     grid-gap: 0px 0px;
   }
 
+  .u-section-5 .u-list-item-1 {
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
+  }
+
   .u-section-5 .u-container-layout-1 {
     padding-top: 25px;
     padding-bottom: 0;
@@ -1616,6 +1640,14 @@
     min-height: 169px;
     margin-top: 25px;
     margin-right: auto;
+  }
+
+  .u-section-5 .u-list-item-2 {
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
   }
 
   .u-section-5 .u-container-layout-3 {
@@ -1637,6 +1669,14 @@
     margin-right: auto;
   }
 
+  .u-section-5 .u-list-item-3 {
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
+  }
+
   .u-section-5 .u-container-layout-5 {
     padding-top: 25px;
     padding-bottom: 0;
@@ -1654,6 +1694,14 @@
     min-height: 169px;
     margin-top: 25px;
     margin-right: auto;
+  }
+
+  .u-section-5 .u-list-item-4 {
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
   }
 
   .u-section-5 .u-container-layout-7 {
@@ -1877,5 +1925,37 @@
     margin-top: -736px;
     margin-left: auto;
     margin-bottom: 0;
+  }
+
+  .u-section-6 .u-text-1 {
+    --animation-custom_in-scale: 1;
+  }
+
+  .u-section-6 .u-text-2 {
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
+  }
+
+  .u-section-6 .u-social-icons-1 {
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
+  }
+
+  .u-section-6 .u-text-3 {
+    --animation-custom_in-scale: 1;
+  }
+
+  .u-section-6 .u-text-4 {
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
   }
 }
